# libite

./: .codedocs  .gitignore  .travis.yml  ChangeLog.md  HACKING.md  LICENSE  Makefile  Makefile.am  README.md  TODO.md  TODO.org  chomp.c  chomp.mk  configure.ac  conio.h  copyfile.c  copyfile.mk  dir.c  dir.mk  fexist.c  fexist.mk  fisdir.c  fisdir.mk  fparseln.c  fsendfile.c  fsendfile.mk  ifconfig.c  lfile.c  lfile.mk  libite.pc.in  lite.h  makepath.c  makepath.mk  pidfile.c  pidfilefn.c  pidfilefn.mk  progress.c  progress.mk  rsync.c  rsync.mk  (+10 more)
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml  coverity.yml  release.yml
debian/: .gitignore  changelog  control  copyright  libite-dev.install  libite-dev.links  libite5.symbols  rules
doc/: .gitignore  API.md  Doxyfile.in  HACKING.md  Makefile.am
src/: .gitignore  Makefile.am  chomp.c  conio.c  conio.h  copyfile.c  dir.c  erasef.c  fexist.c  fisdir.c  fmode.c  fopenf.c  fparseln.c  fremove.c  fsendfile.c  ifconfig.c  lfile.c  libite.pc.in  lite.h  makepath.c  pidfile.c  pidfilefn.c  popenf.c  procval.c  progress.c  reallocarray.c  rsync.c  runbg.c  strdupa.h  strlcat.c  strlcpy.c  strlite.h  strmatch.c  strndupa.h  strnlen.h  strtonum.c  strtrim.c  systemf.c  telnet.c  tempfile.c  (+5 more)
test/: .gitignore  Makefile.am  check.h  chomp.c  copyfile.c  dir.c  fexist.c  lfile.c  makepath.c  pidfile.c  printhdr.c  progress.c  rsync.c  runbg.c  systemf.c  tempfile.c  touch.c  which.c  yorn.c
test/data/lfile/: fstab
tests/: .gitignore  Makefile.am  check.h  copyfile.c  dir.c  fexist.c  fisdir.c  fopenf.c  fsendfile.c  lfile.c  makepath.c  pidfile.c  pidfile_func.c  progress.c  rsync.c  str.c  strmatch.c  systemf.c  tempfile.c  touch.c  tree.c  which.c
tests/data/fexist/: broken-link
